# newsletter

./: .env  Cargo.toml  Dockerfile  README.md  SETUP.md  TODOS.Md  configuration.yaml  git-hooks.sample  spec.yaml  sqlx-data.json
.cargo/: config.toml
.git-hook-samples/: pre-commit  pre-commit.sh  pre-push
.git.samples/: pre-commit.sh  pre-push.sh
.github/workflows/: general.yml
configuration/: base.yaml
migrations/: 20221208135810_create_subscriptions_table.sql
scripts/: init_db.sh  pre-commit.sh  pre-push.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs  subscribe.rs
tests/common/: mod.rs
