[package]
name = "newsletter-api"
version = "0.1.0"
edition = "2021"
authors = ["Austin Theriot <austinmtheriot@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = 'src/main.rs'
name = 'newsletter-api'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0.148", features = ["derive"] }
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread"] }
config = "0.13.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.11", default-features = false, features = ["clock"] }
log = "0.4.17"
env_logger = "0.9"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.11.13"
serde_json = "1.0.89"
