[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"
authors = ["Austin Theriot <austinmtheriot@gmail.com>"]

[lib]
path = "src/lib.rs"

[[bin]]
path = 'src/main.rs'
name = 'newsletter'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0.148", features = ["derive"] }
serde-aux = "4.1.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
config = "0.13.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.11", default-features = false, features = ["clock"] }
# allows us to create a logging and tracing service for our app
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.16", features = [
    "registry",
    "env-filter",
] }
tracing-bunyan-formatter = "0.3.4"
tracing-log = "0.1.3"
secrecy = { version = "0.8.0", features = ["serde"] }
tracing-actix-web = "0.6.2"
unicode-segmentation = "1.10.0"
once_cell = "1.16.0"
claim = "0.5"
thiserror = "1.0.37"

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
]

[dev-dependencies]
reqwest = "0.11.13"
serde_json = "1.0.89"
